objects/CaseNotificationEmail__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CC_Address__c</fullName>
        <label>CC Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Current_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Address__c</fullName>
        <label>To Address</label>
        <type>TextArea</type>
    </fields>
    <label>CaseNotificationEmail</label>
</CustomObject>